--- a/templates/search.html
+++ b/templates/search.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Proteomes</title>
     <link rel="stylesheet" href="/static/search-styles.css">
+    <script src="https://3Dmol.org/build/3Dmol-min.js"></script>
+    <script src="https://3Dmol.org/build/3Dmol.ui-min.js"></script>
+    </style>
 </head>
 <body>
     <!-- Top Ribbon -->
@@ -51,6 +54,7 @@
 
         <!-- Search Results Section -->
         <section id="search-results"></section>
+        <div id="viewer-container"></div>
     </main>
 
     <!-- JavaScript -->
